SET( AETHER_HTTP_SOURCES 
     Parser.cpp
   )
      
SET( AETHER_HTTP_HEADERS
     Parser.h
   )

SET( AETHER_HTTP_INCLUDE_DIRS
   )

SET( AETHER_HTTP_LIBRARIES
   )

ADD_LIBRARY               ( aehttp SHARED  ${AETHER_HTTP_SOURCES} ${AETHER_HTTP_HEADERS} )
TARGET_LINK_LIBRARIES     ( aehttp PUBLIC  ${AETHER_HTTP_LIBRARIES}                      )
TARGET_INCLUDE_DIRECTORIES( aehttp PRIVATE ${AETHER_HTTP_INCLUDE_DIRS}                   )

BUILD_TEST( TARGET aehttp )

INSTALL( FILES  ${AETHER_HTTP_HEADERS}  DESTINATION  ${INCLUDE_DIR}/http )
INSTALL( TARGETS aehttp EXPORT aetherlib 
           RUNTIME  DESTINATION ${EXPORT_LIB_DIR}/http
           ARCHIVE  DESTINATION ${EXPORT_LIB_DIR}/http
           LIBRARY  DESTINATION ${EXPORT_LIB_DIR}/http
           INCLUDES DESTINATION ${EXPORT_INCLUDE_DIR} )

