SET( YGGDRASIL_HTTP_SOURCES 
     Parser.cpp
     ImageDownload.cpp
     stb_image.cpp
   )
      
SET( YGGDRASIL_HTTP_HEADERS
     Parser.h
     ImageDownload.h
     stb_image.h
   )

SET( YGGDRASIL_HTTP_INCLUDE_DIRS
   )

SET( YGGDRASIL_HTTP_LIBRARIES
   )

# Add the appropriate OS library to link depending on platform being built.
IF( UNIX AND NOT APPLE )
  SET( YGGDRASIL_HTTP_LIBRARIES ${YGGDRASIL_HTTP_LIBRARIES} ygglinux )
ELSEIF( WIN32 )
  SET( YGGDRASIL_HTTP_LIBRARIES ${YGGDRASIL_HTTP_LIBRARIES} yggwin32 )
ENDIF()

ADD_LIBRARY               ( ygghttp SHARED  ${YGGDRASIL_HTTP_SOURCES} ${YGGDRASIL_HTTP_HEADERS} )
TARGET_LINK_LIBRARIES     ( ygghttp PUBLIC  ${YGGDRASIL_HTTP_LIBRARIES}                         )
TARGET_INCLUDE_DIRECTORIES( ygghttp PRIVATE ${YGGDRASIL_HTTP_INCLUDE_DIRS}                      )

BUILD_TEST( TARGET ygghttp )

INSTALL( FILES  ${YGGDRASIL_HTTP_HEADERS}  DESTINATION  ${INCLUDE_DIR}/http )
INSTALL( TARGETS ygghttp EXPORT ygglib 
           RUNTIME  DESTINATION ${EXPORT_LIB_DIR}/http
           ARCHIVE  DESTINATION ${EXPORT_LIB_DIR}/http
           LIBRARY  DESTINATION ${EXPORT_LIB_DIR}/http
           INCLUDES DESTINATION ${EXPORT_INCLUDE_DIR} )

