IF( UNIX AND NOT APPLE ) 
  FIND_PACKAGE( OpenSSL REQUIRED )
  SET( AETHER_LINUX_SOURCES 
       Linux.cpp
       Connection.cpp
     )
        
  SET( AETHER_LINUX_HEADERS
       Linux.h
       Connection.h
     )
  SET( AETHER_LINUX_INCLUDE_DIRS
       ${OPENSSL_INCLUDE_DIR}
     )
  SET( AETHER_LINUX_LIBRARIES
        ${OPENSSL_LIBRARIES}
        aether
      )
  
  ADD_LIBRARY               ( aelinux SHARED  ${AETHER_LINUX_SOURCES} ${AETHER_LINUX_HEADERS} )
  TARGET_LINK_LIBRARIES     ( aelinux PUBLIC  ${AETHER_LINUX_LIBRARIES}                       )
  TARGET_INCLUDE_DIRECTORIES( aelinux PRIVATE ${AETHER_LINUX_INCLUDE_DIRS}                    )
  
  BUILD_TEST( TARGET aelinux )
  
  INSTALL( FILES  ${AETHER_LINUX_HEADERS}  DESTINATION  ${INCLUDE_DIR}/linux )
  INSTALL( TARGETS aelinux EXPORT aether 
             RUNTIME  DESTINATION ${EXPORT_LIB_DIR}/linux
             ARCHIVE  DESTINATION ${EXPORT_LIB_DIR}/linux
             LIBRARY  DESTINATION ${EXPORT_LIB_DIR}/linux
             INCLUDES DESTINATION ${EXPORT_INCLUDE_DIR} )
ENDIF()

