IF( UNIX AND NOT APPLE ) 
  FIND_PACKAGE( OpenSSL REQUIRED )
  SET( YGGDRASIL_LINUX_SOURCES 
       Linux.cpp
       Connection.cpp
     )
        
  SET( YGGDRASIL_LINUX_HEADERS
       Linux.h
       Connection.h
     )
  SET( YGGDRASIL_LINUX_INCLUDE_DIRS
       ${OPENSSL_INCLUDE_DIR}
     )
  SET( YGGDRASIL_LINUX_LIBRARIES
        ${OPENSSL_LIBRARIES}
        yggdrasil
      )
  
  ADD_LIBRARY               ( ygglinux SHARED  ${YGGDRASIL_LINUX_SOURCES} ${YGGDRASIL_LINUX_HEADERS} )
  TARGET_LINK_LIBRARIES     ( ygglinux PUBLIC  ${YGGDRASIL_LINUX_LIBRARIES}                          )
  TARGET_INCLUDE_DIRECTORIES( ygglinux PRIVATE ${YGGDRASIL_LINUX_INCLUDE_DIRS}                       )
  
  BUILD_TEST( TARGET ygglinux )
  
  INSTALL( FILES  ${YGGDRASIL_LINUX_HEADERS}  DESTINATION  ${HEADER_INSTALL_DIR}/linux )
  INSTALL( TARGETS ygglinux EXPORT ygglib 
             RUNTIME  DESTINATION ${EXPORT_LIB_DIR}/linux
             ARCHIVE  DESTINATION ${EXPORT_LIB_DIR}/linux
             LIBRARY  DESTINATION ${EXPORT_LIB_DIR}/linux
             INCLUDES DESTINATION ${EXPORT_INCLUDE_DIR} )
ENDIF()

